fixed scroll on tablet and mobile version

--- a/styles.css
+++ b/styles.css
@@ -435,13 +435,13 @@ body {
   }
 
   .favourites {
-    height: 80%;
+    height: 90%;
     overflow-y: auto;
-    margin-top: 20%;
+    margin-top: 15%;
   }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 381px) {
   .cross .line1 {
     transform: rotateZ(45deg) translate(2px) translateY(2px);
   }
@@ -463,7 +463,7 @@ body {
     width: 340px;
   }
 
-  .favourites {
+  .side-bar {
     width: 100%;
   }
   .like {
